turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
val DEVANT : Int = 1
val GAUCHE : Int = 2
val ARRIERE : Int = 4
val DROITE : Int = 8

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  
  //---
  def setCouleurSol(c:Color)
  		{setCouleurBrosse(c); baisseBrosse() ; leveBrosse()}
  
  
  //---
  var ind : Int = 0
  var couleurActuelle : Color = getCouleurSol() // on a la couleur du sol
  while (colors(ind)!=couleurActuelle) {ind+=1} // on a indice de la couleur
  //on a deja l'etat  'state'
  
  // on veut les info de la suite
  
  //1) mettre couleur au sol
  setCouleurSol(colors(rule(state)(couleurActuelle)(0)))
  
  //2) actions a faire
  if (rule(state)(couleurActuelle)(1) == DEVANT) {avance()}
  if (rule(state)(couleurActuelle)(1) == GAUCHE) {gauche() ; avance()}
  if (rule(state)(couleurActuelle)(1) == ARRIERE) {retourne() ; avance()}
  if (rule(state)(couleurActuelle)(1) == DROITE) {droite() ; avance()}
  
  //3) etat
  state = rule(state)(couleurActuelle)(2)
  
}
